--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,10 +3,100 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+   --accent-color: #FF0070;
+   --header-color: #DB00FF;
+    --color-font: #F1B2CE;
+    background-image: url(../images/cover-image-dark.png);
+    --bg-color: #000028;
+    --title-color: #000028;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+.theme_dark .header {
+    background-image: url(../images/cover-image-dark.png);
+    background-color: var(--bg-color, #000028);
+    background-position: center;
+    background-size: cover;
+}
+
+.theme_dark .decorated-zone::before {
+    border-block-start: 1px solid var(--accent-color, #ff0070);
+    border-inline-end: 1px solid var(--accent-color, #ff0070);
+}
+
+.theme_dark .decorated-zone::after {
+    border-block-end: 1px solid var(--accent-color, #ff0070);
+    border-inline-start: 1px solid var(--accent-color, #ff0070);
+}
+
+.theme_dark .header__theme-menu {
+    color: var(--accent-color, #FF0070);
+}
+
+.theme_dark.decoration__menu-item::after {
+    content: "REC";
+    width: 33px;
+    height: 26px;
+    right: 37px;
+    top: 16px;
+    color: var(--accent-color, #FF0070);
+    position: absolute;
+}
+
+.theme_dark .decoration__menu-item::before {
+    content: " ";
+    position: absolute;
+    width: 9px;
+    height: 9px;
+    border-radius: 4px;
+    background-color: var(--accent-color, #FF0070);
+    filter: drop-shadow(0px 0px 4px var(--accent-color, #FF0070));
+    right: 20px;
+    top: 20px;
+}
+
+.theme_dark .header__theme-menu-button_active {
+    border: 1px solid var(--accent-color, #ff0070);
+}
+
+.header-title {
+    color: var(--header-color, #DB00FF);
+}
+
+.page{
+    background-image: url(../images/cover-image-dark.png);
+    /*background-color: rgba(241, 178, 206,  );
+    opacity: 0.6000000238418579;*/
+}
+
+.header-block-title {
+    background-color: var(--accent-color, #ff0070);
+}
+
+.main__content-section-title {
+    color: var(--accent-color, #ff0070);
+}
+
+.text_link:hover {
+    text-decoration: underline solid 1px var(--color-font, #fib2ce);
+    text-underline-offset: 5px;
+
+}
+
+.text_link:focus-visible {
+    border-block-end: 0 solid var(--color-font, #fib2ce);
+}
+
+.footer__title {
+    color: var(--header-color, #db00ff);
 }
