--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,82 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+    --color-font: #353430;
+    --accent-color: #FF8DCB;
+    --accent-header-color: #FF0070;
+    --header-color: #FFC2E6;
+    --title-color: #000028;
+}
+
+.header {
+    background-image: url(../images/cover-image-light.png);
+    display: grid;
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    /*background-attachment: fixed;
+    /*flex-direction: column;*/
+    padding:20px;
+    background-repeat: no-repeat;
+    position: relative;
+    block-size: 100vb;
+}
+
+.header__theme-menu {
+    color: var(--accent-header-color, #FF0070);
+}
+
+.decorated-zone::before {
+    border-block-start: 1px solid var(--color-font, #353430);
+    border-inline-end: 1px solid var(--color-font, #353430);
+}
+
+.decorated-zone::after {
+    border-block-end: 1px solid var(--color-font, #353430);
+    border-inline-start: 1px solid var(--color-font, #353430);
+}
+
+.header__theme-menu {
+    color: var(--color-font, #353430);
+}
+
+.theme_light .decoration__menu-item::after {
+    display: none;
+}
+
+.theme_light .decoration__menu-item::before {
+    display: none;
+}
+
+.header__theme-menu-button_active {
+    border: 1px solid var(--color-font, #353430);
+}
+
+.theme_light .header__theme-menu-button:hover {
+    outline: 1px solid var(--color-font, #353430);
+    cursor: pointer;
+}
+
+.header__theme-menu-button:focus-visible {
+    border-block-end: 1px solid var(--color-font, #ff353430);
+}
+
+
+.header-title {
+    color: var(--header-color, #DB00FF);
+}
+
+.page {
+    background-image: url(../images/cover-image-light.png);
+    /*background-color: rgba(241, 178, 206,  );
+    opacity: 0.6000000238418579;*/
+}
+.header-block-title {
+    background-color: var(--accent-color, #FF8DCB);
+}
+
+
+.footer__title {
+    color: var(--header-color, #FFC2E6);
 }
