--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,17 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+    --font: IBM Plex Mono;
+    --bg-color: #000028;
+    --header-color: #DB00FF;
+    --title-color: #000028;
+    --font-color: #353430;
+    --accent-color: #FF0070;
+    --color-font: #F1B2CE;
+    --main-font-weight: 400;
+    --accent-font-weight: 700;
+    --main-font-size: 18px;
+    --accent-font-size: 157px;
+}
