--- a/styles/light.css
+++ b/styles/light.css
@@ -31,9 +31,9 @@
     block-size: 100vb;
 }
 
-.header__theme-menu {
+/*.header__theme-menu {
     color: var(--accent-header-color, #FF0070);
-}
+}*/
 
 .decorated-zone::before {
     border-block-start: 1px solid var(--color-font, #353430);
