--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@
     padding: 0 13px;
     background-color: transparent;
     border: none;
-    font-family: var(--font);
+    font-family: var(--font, sans-serif);
     text-transform: lowercase;
     cursor: pointer;
     font-size: var(--main-font-size, 18px);
@@ -142,18 +142,18 @@
 }
 
 .main__content-section-title  {
-    font-family: var(--font);
-    font-size: var(--main-font-size);
-    font-weight: var(--accent-font-weight);
+    font-family: var(--font, sans-serif);
+    font-size: var(--main-font-size, 18px);
+    font-weight: var(--accent-font-weight, 700);
     line-height: 130%;
     margin: 0 20px 20px 0;
     width: 28%;
 }
 
 .section-block-text {
-    font-family: var(--font);
-    font-size: var(--main-font-size);
-    font-weight: var(--main-font-weight);
+    font-family: var(--font, sans-serif);
+    font-size: var(--main-font-size, 18px);
+    font-weight: var(--main-font-weight, 400);
     line-height: 130%;
     color: var(--color-font, #F1B2CE);
 }
